2010-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44534
	* config/i386/sse.md (vec_extract_lo_<mode>): Replace 0x1 with
	0x0.
	(vec_extract_lo_v16hi): Likewise.
	(vec_extract_lo_v32qi): Likewise.

2010-06-14  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/44508
	* tree-ssa-propagate.c (substitute_and_fold): Don't do DCE
	when called from tree-vrp.c.

2010-06-13  Gerald Pfeifer  <gerald@pfeifer.com>

	Backport from mainline:
	2009-09-11  Loren J. Rittle  <ljrittle@acm.org>

	* config.gcc (*-*-freebsd*): Enable default_use_cxa_atexit
	to match the system compiler's configuration at inflection point.

2010-06-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/44481
	* config/i386/i386.md (UNSPEC_PARITY): New unspec.
	(paritydi2_cmp): Use UNSPEC_PARITY unspec insted of parity RTX.
	(partiysi2_cmp): Ditto.
	(*partiyhi2_cmp): Ditto.
	(*parityqi2_cmp): Remove.

2010-06-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movsi_1) <TYPE_LEA>: Use %a modifier
	to output operand 1.
	(ashift_zext lea splitter): Use DImode for multiplication.

	* config/i386/i386.c (ix86_expand_epilogue): Do not use ix86_gen_add
	to generate addition.

2010-06-07  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-06-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (gcc_cv_ld_sol2_emulation): Test for GNU ld *_sol2
	linker emulations.
	* configure: Regenerate.
	* config.in: Regenerate.

	* config/i386/sol2-10.h [TARGET_GNU_LD] (I386_EMULATION): Define.
	(X86_64_EMULATION): Define.
	(TARGET_LD_EMULATION): Use them.

	* config/sparc/sol2-gld-bi.h (SPARC32_EMULATION): Define.
	(SPARC64_EMULATION): Define.
	(LINK_ARCH_SPEC): Use them.

2010-06-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*addqi_4): Check for incdec_operand in QImode.

2010-06-04  Alan Modra  <amodra@gmail.com>

	PR target/44075