@@ -5369,7 +5369,8 @@ omp_notice_variable (struct gimplify_omp_ctx *ctx, tree decl, bool in_code)
 	{
 	case OMP_CLAUSE_DEFAULT_NONE:
 	  error ("%qs not specified in enclosing parallel",
-		 IDENTIFIER_POINTER (DECL_NAME (decl)));
+		 IDENTIFIER_POINTER (DECL_NAME
+				(lang_hooks.decls.omp_report_decl (decl))));
 	  if ((ctx->region_type & ORT_TASK) != 0)
 	    error ("%Henclosing task", &ctx->location);
 	  else
