@@ -1,3 +1,9 @@
+2010-06-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/44536
+	* gfortran.dg/gomp/pr44536.f90: New test.
+	* gfortran.dg/gomp/sharing-3.f90: Remove xfail.
+
 2010-06-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline
